xee-xpath/src/ir/snapshots/xee_xpath__ir__ast_ir__tests__let_expr_variable.snap
---
source: xee-xpath/src/ir/ast_ir.rs
expression: "convert_expr_single(\"let $x := 1 return $x\")"
---
Ok(
    Spanned {
        value: Let(
            Let {
                name: Name(
                    "v0",
                ),
                var_expr: Spanned {
                    value: Atom(
                        Spanned {
                            value: Const(
                                Integer(
                                    1,
                                ),
                            ),
                            span: SourceSpan {
                                offset: SourceOffset(
                                    10,
                                ),
                                length: SourceOffset(
                                    1,
                                ),
                            },
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            10,
                        ),
                        length: SourceOffset(
                            1,
                        ),
                    },
                },
                return_expr: Spanned {
                    value: Atom(
                        Spanned {
                            value: Variable(
                                Name(
                                    "v0",
                                ),
                            ),
                            span: SourceSpan {
                                offset: SourceOffset(
                                    19,
                                ),
                                length: SourceOffset(
                                    2,
                                ),
                            },
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            19,
                        ),
                        length: SourceOffset(
                            2,
                        ),
                    },
                },
            },
        ),
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                21,
            ),
        },
    },
)
