xee-xpath/src/ir/snapshots/xee_xpath__ir__ast_ir__tests__multiple_axis_steps.snap
---
source: xee-xpath/src/ir/ast_ir.rs
expression: "convert_xpath(\"child::a/child::b\")"
---
Ok(
    Spanned {
        value: FunctionDefinition(
            FunctionDefinition {
                params: [
                    Param(
                        Name(
                            "v0",
                        ),
                    ),
                    Param(
                        Name(
                            "v1",
                        ),
                    ),
                    Param(
                        Name(
                            "v2",
                        ),
                    ),
                ],
                body: Spanned {
                    value: Let(
                        Let {
                            name: Name(
                                "v3",
                            ),
                            var_expr: Spanned {
                                value: Step(
                                    Step {
                                        step: Step {
                                            axis: Child,
                                            node_test: NameTest(
                                                Name(
                                                    Name {
                                                        name: "a",
                                                        namespace: None,
                                                    },
                                                ),
                                            ),
                                        },
                                        context: Spanned {
                                            value: Variable(
                                                Name(
                                                    "v0",
                                                ),
                                            ),
                                            span: SourceSpan {
                                                offset: SourceOffset(
                                                    0,
                                                ),
                                                length: SourceOffset(
                                                    0,
                                                ),
                                            },
                                        },
                                    },
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        0,
                                    ),
                                    length: SourceOffset(
                                        8,
                                    ),
                                },
                            },
                            return_expr: Spanned {
                                value: Map(
                                    Map {
                                        context_names: ContextNames {
                                            item: Name(
                                                "v4",
                                            ),
                                            position: Name(
                                                "v5",
                                            ),
                                            last: Name(
                                                "v6",
                                            ),
                                        },
                                        var_atom: Spanned {
                                            value: Variable(
                                                Name(
                                                    "v3",
                                                ),
                                            ),
                                            span: SourceSpan {
                                                offset: SourceOffset(
                                                    0,
                                                ),
                                                length: SourceOffset(
                                                    8,
                                                ),
                                            },
                                        },
                                        return_expr: Spanned {
                                            value: Step(
                                                Step {
                                                    step: Step {
                                                        axis: Child,
                                                        node_test: NameTest(
                                                            Name(
                                                                Name {
                                                                    name: "b",
                                                                    namespace: None,
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                    context: Spanned {
                                                        value: Variable(
                                                            Name(
                                                                "v4",
                                                            ),
                                                        ),
                                                        span: SourceSpan {
                                                            offset: SourceOffset(
                                                                0,
                                                            ),
                                                            length: SourceOffset(
                                                                0,
                                                            ),
                                                        },
                                                    },
                                                },
                                            ),
                                            span: SourceSpan {
                                                offset: SourceOffset(
                                                    9,
                                                ),
                                                length: SourceOffset(
                                                    8,
                                                ),
                                            },
                                        },
                                    },
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        9,
                                    ),
                                    length: SourceOffset(
                                        8,
                                    ),
                                },
                            },
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            9,
                        ),
                        length: SourceOffset(
                            8,
                        ),
                    },
                },
            },
        ),
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                17,
            ),
        },
    },
)
