xee-xpath/src/ir/snapshots/xee_xpath__ir__ast_ir__tests__named_function_ref.snap
---
source: xee-xpath/src/ir/ast_ir.rs
expression: "convert_expr_single(\"my_function#2\")"
---
Ok(
    Spanned {
        value: Atom(
            Spanned {
                value: Const(
                    StaticFunctionReference(
                        StaticFunctionId(
                            0,
                        ),
                        None,
                    ),
                ),
                span: SourceSpan {
                    offset: SourceOffset(
                        0,
                    ),
                    length: SourceOffset(
                        13,
                    ),
                },
            },
        ),
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                13,
            ),
        },
    },
)
