xee-xpath/src/ir/snapshots/xee_xpath__ir__ast_ir__tests__named_function_ref2.snap
---
source: xee-xpath/src/ir/ast_ir.rs
expression: "convert_xpath(\"my_function#2\")"
---
Ok(
    Spanned {
        value: FunctionDefinition(
            FunctionDefinition {
                params: [
                    Param(
                        Name(
                            "v0",
                        ),
                    ),
                    Param(
                        Name(
                            "v1",
                        ),
                    ),
                    Param(
                        Name(
                            "v2",
                        ),
                    ),
                ],
                body: Spanned {
                    value: StaticFunctionReference(
                        StaticFunctionId(
                            0,
                        ),
                        Some(
                            ContextNames {
                                item: Name(
                                    "v0",
                                ),
                                position: Name(
                                    "v1",
                                ),
                                last: Name(
                                    "v2",
                                ),
                            },
                        ),
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            13,
                        ),
                    },
                },
            },
        ),
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                13,
            ),
        },
    },
)
